<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">


    </LinearLayout>

    <TextView
        android:id="@+id/personal_textview_explore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/personalExplore"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/business_textview_explore"/>

    <Button
        android:id="@+id/personal_underline"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/personal_textview_explore"
        app:layout_constraintEnd_toEndOf="@+id/personal_textview_explore"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        android:alpha="1.0"/>

    <TextView
        android:id="@+id/business_textview_explore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/businessExplore"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/merchant_textview_explore"
        app:layout_constraintStart_toEndOf="@+id/personal_textview_explore"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/business_underline"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:text="Button"
        android:background="@color/white"
        android:alpha="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/business_textview_explore"
        app:layout_constraintStart_toEndOf="@+id/personal_textview_explore" />

    <TextView
        android:id="@+id/merchant_textview_explore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/merchantExplore"
        android:textColor="#808080"
        app:layout_constraintStart_toEndOf="@id/business_textview_explore"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />



    <Button
        android:id="@+id/merchant_underline"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:text="Button"
        android:background="@color/white"
        android:alpha="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/merchant_textview_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/business_textview_explore" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/plus_options_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


    </androidx.viewpager.widget.ViewPager>

    <ImageButton
        android:id="@+id/plus_options_explore"
        android:layout_width="71dp"
        android:layout_height="71dp"


        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shortcut_add" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/ic_launcher_eye" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Explore"
        android:textColor="#123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/imageView6"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/ic_launcher_network" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Network"
        android:textColor="#5E7472"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/ic_launcher_chat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/ic_launcher_contacts" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:srcCompat="@drawable/ic_launcher_groups" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Groups"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8" />


</androidx.constraintlayout.widget.ConstraintLayout>